--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
-    "sass": "^1.69.5",
+    "sass": "^1.69.7",
+    "sass-loader": "^13.3.3",
     "vite": "^5.0.0"
   }
 }
