--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.8",
     "vue-router": "^4.0.13"
